@@ -1,4 +1,8 @@
-COMPILERFLAGS = -Wall -static
+COMPILERFLAGS = -Wall
+
+if with_staticlibs
+COMPILERFLAGS += -static
+endif
 
 USERLIBS =
 INCLUDES = -I.. -I. -I../libopenjpeg -I../common
